# mq_client

./: README.md  pyproject.toml
src/mq_client/: __init__.py  client.py  consumer.py  manager.py  models.py  producer.py
tests/: __init__.py  test_client.py  test_consumer.py  test_manager.py  test_models.py  test_producer.py
