[project]
name = "mq-client"
version = "0.1.0"
description = "Клиент взаимодействия с шиной данных RabbitMQ"
authors = [
    {name = "Daniil Kornyshev", email = "daniil.kornyshev@rt.ru"},
]
dependencies = [
    "aio-pika==9.5.8",
    "pydantic==2.12.5",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[dependency-groups]
test = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
]
